syntax = "proto3";

package neis;

service ScheduleService {
    rpc GetHello(GetHelloRequest) returns (GetHelloResponse) {}
}

message GetHelloRequest {

}

message GetHelloResponse {
    string message = 1;
}